--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.14.3",
     "sequelize": "^6.37.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.18.3"
   },
   "devDependencies": {
